--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 10
 
 # GET DEM BORDERS OUT OF HEREc:w
 #
@@ -54,6 +54,9 @@ floating_modifier $mod
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
+
+# take a screenshot
+bindsym Print exec maim -s -u | xclip -selection clipboard -t image/png -i
 
 # start a terminal
 bindsym $mod+Return exec kitty
