added redshift config file and changed i3's config so it'll execute redshift when it [i3] starts

--- a/i3/config
+++ b/i3/config
@@ -201,4 +201,5 @@ bar {
 
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec --no-startup-id /usr/bin/gnome-settings-daemon
+exec --no-startup-id redshift
 
